--- a/packages/docs/src/components/layout/global-layout.css
+++ b/packages/docs/src/components/layout/global-layout.css
@@ -6,3 +6,26 @@
 html {
     scroll-padding-top: var(--header-height);
 }
+
+::-webkit-scrollbar {
+    width: 6px;
+}
+
+::-webkit-scrollbar-track {
+}
+
+::-webkit-scrollbar-thumb {
+    background: #d2d2d2;
+    border-radius: 8px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background: #c5c5c5;
+}
+
+.dark ::-webkit-scrollbar-thumb {
+    background: #3b3b3b;
+}
+.dark ::-webkit-scrollbar-thumb:hover {
+    background: #4b4b4b;
+}
