--- a/packages/docs-new/src/css/custom.css
+++ b/packages/docs-new/src/css/custom.css
@@ -6,25 +6,87 @@
 
 /* You can override the default Infima variables here. */
 :root {
-  --ifm-color-primary: #2e8555;
-  --ifm-color-primary-dark: #29784c;
-  --ifm-color-primary-darker: #277148;
-  --ifm-color-primary-darkest: #205d3b;
-  --ifm-color-primary-light: #33925d;
-  --ifm-color-primary-lighter: #359962;
-  --ifm-color-primary-lightest: #3cad6e;
+  /*--ifm-color-primary: #9458DC;
+  --ifm-color-primary-dark: #843FD7;
+  --ifm-color-primary-darker: #7C33D5;
+  --ifm-color-primary-darkest: #6A26BD;
+  --ifm-color-primary-light: #AD7FE5;
+  --ifm-color-primary-lighter: #CAADEF;
+  --ifm-color-primary-lightest: #E7D7FA;*/
+  --ifm-color-primary: #843FD7;
+  --ifm-color-primary-dark: #7C33D5;
+  --ifm-color-primary-darker: #6A26BD;
+  --ifm-color-primary-darkest: #5E20AA;
+  --ifm-color-primary-light: #9458DC;
+  --ifm-color-primary-lighter: #AD7FE5;
+  --ifm-color-primary-lightest: #F6ECFF;
   --ifm-code-font-size: 95%;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
+
+  --ifm-menu-color-background-active: color-mix(in srgb, var(--ifm-color-primary) 10%, transparent);
 }
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
 [data-theme='dark'] {
-  --ifm-color-primary: #25c2a0;
-  --ifm-color-primary-dark: #21af90;
-  --ifm-color-primary-darker: #1fa588;
-  --ifm-color-primary-darkest: #1a8870;
-  --ifm-color-primary-light: #29d5b0;
-  --ifm-color-primary-lighter: #32d8b4;
-  --ifm-color-primary-lightest: #4fddbf;
+  --ifm-color-primary: #AD7FE5;
+  --ifm-color-primary-dark: #9458DC;
+  --ifm-color-primary-darker: #843FD7;
+  --ifm-color-primary-darkest: #7C33D5;
+  --ifm-color-primary-light: #CAADEF;
+  --ifm-color-primary-lighter: #E7D7FA;
+  --ifm-color-primary-lightest: #F6ECFF;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
+
+}
+
+.navbar {
+  background-color: black;
+}
+
+.navbar__link, .navbar__title {
+  color: #f5f6f8;
+}
+.navbar__link:hover, .navbar__link--active, .navbar__title:hover {
+  color: #b771ff;
+}
+.toggleButton_------node_modules-\@docusaurus-theme-classic-lib-theme-ColorModeToggle-styles-module {
+  color: white;
+}
+.toggleButton_------node_modules-\@docusaurus-theme-classic-lib-theme-ColorModeToggle-styles-module:hover {
+  background-color: #333 !important;
+}
+
+
+.theme-doc-sidebar-item-category-level-1:not(:first-child) {
+  margin-top: 2rem !important;
+}
+.menu__link {
+  font-weight: normal;
+  font-size: .8rem;
+  position: relative;
+  border-radius: 12px;
+  margin-right: .5rem;
+}
+.menu__link--active {
+  font-weight: 600;
+  color: var(--ifm-menu-color);
+}
+.menu__link:hover {
+  color: inherit !important;
+}
+.menu__list-item-collapsible:hover {
+  background-color: transparent !important;
+}
+.theme-doc-sidebar-item-link-level-2 .menu__link--active {
+  color: var(--ifm-color-primary);
+}
+.theme-doc-sidebar-item-link-level-2 .menu__link--active:before {
+  content: "";
+  position: absolute;
+  border-radius: 16px;
+  left: -6px;
+  top: 6px;
+  bottom: 6px;
+  width: 4px;
+  background-color: rgb(121, 80, 242);
 }
