--- a/packages/docs-new/src/css/custom.css
+++ b/packages/docs-new/src/css/custom.css
@@ -24,6 +24,7 @@
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
 
   --ifm-menu-color-background-active: color-mix(in srgb, var(--ifm-color-primary) 10%, transparent);
+  --ifm-footer-background-color: white;
 }
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
@@ -37,6 +38,7 @@
   --ifm-color-primary-lightest: #F6ECFF;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
 
+  --ifm-footer-background-color: black;
 }
 
 .navbar {
@@ -54,6 +56,10 @@
 }
 .toggleButton_------node_modules-\@docusaurus-theme-classic-lib-theme-ColorModeToggle-styles-module:hover {
   background-color: #333 !important;
+}
+
+[data-theme='light'] footer {
+  border-top: 1px solid #eaecef;
 }
 
 
