--- a/packages/sb-react/.storybook/style.css
+++ b/packages/sb-react/.storybook/style.css
@@ -88,7 +88,7 @@
 
 .dragline {
     position: absolute;
-    height: 3px;
+    height: 2px;
     width: unset;
     margin-top: -1px;
     background-color: #00aff4;
@@ -99,8 +99,9 @@
     position: absolute;
     left: 0;
     top: -3px;
-    height: 8px;
-    width: 8px;
-    background-color: #00aff4;
+    height: 4px;
+    width: 4px;
+    background: #fff;
+    border: 2px solid #00aff4;
     border-radius: 99px;
 }
