--- a/packages/sb-react/.storybook/style.css
+++ b/packages/sb-react/.storybook/style.css
@@ -49,15 +49,8 @@
 }
 
 .treeitem.drop {
-    border-color: red;
-}
-
-.treeitem.dropabove {
-    border-top: 1px solid red;
-}
-
-.treeitem.dropbelow {
-    border-bottom: 1px solid red;
+    border-color: #00aff4;
+    background-color: #e1f1f8;
 }
 
 .treeitem.searchmatch {
