--- a/packages/sb-react/.storybook/style.css
+++ b/packages/sb-react/.storybook/style.css
@@ -36,7 +36,7 @@
     border-color: black;
 }
 
-.treeitem:focus {
+.tree button[role="treeitem"]:focus {
     outline: none;
 }
 
@@ -77,7 +77,6 @@
     border-radius: 8px;
     padding: 8px 12px;
 }
-
 
 .dragline {
     position: absolute;
