--- a/packages/sb-react/.storybook/style.css
+++ b/packages/sb-react/.storybook/style.css
@@ -1,3 +1,7 @@
+:root {
+    --selected-color: #f0f2f5;
+}
+
 .tree {
     max-width: 300px;
 }
@@ -14,21 +18,28 @@
     width: 100%;
     text-align: left;
     background-color: white;
-    border: 1px solid #ccc;
-    padding: 4px 6px;
+    padding: 6px 10px;
+    position: relative;
+    border-radius: 8px;
+    transition: background-color .2s ease;
+    cursor: pointer;
+}
+.treeitem:hover {
+    background-color: var(--selected-color);
 }
 
 .renaming-item {
-    background-color: white;
-    border: 1px solid #ccc;
-    padding: 4px 6px;
+    background-color: var(--selected-color);
     margin-bottom: 2px;
+    border-radius: 8px;
+    padding: 4px 10px 5px 24px;
 }
 .renaming-item input {
     width: 100%;
     height: 100%;
     border: none;
     background: transparent;
+    outline: none;
 }
 
 .treeitem:hover {
@@ -43,17 +54,17 @@
     background-color: #eee;
 }
 
-.treeitem.focused {
-    border-color: black;
+button:focus-visible .treeitem.focused, .treeitem.searchmatch.focused {
+    outline: 2px solid black;
 }
 
 .treeitem.drop {
-    border-color: #00aff4;
+    border-color: var(--selected-color);
     background-color: #e1f1f8;
 }
 
 .treeitem.searchmatch {
-    background-color: #ffffcd;
+    background-color: #e1f8ff;
 }
 
 .treeitem.folder:before {
@@ -67,6 +78,21 @@
 
 .treeitem.folder.expanded:before {
     transform: rotate(90deg);
+}
+
+.treeitem:not(.folder) {
+    padding-left: 24px;
+}
+
+.treeitem.selected:after {
+    content: " ";
+    position: absolute;
+    top: 5px;
+    left: -2px;
+    height: 16px;
+    width: 4px;
+    background-color: #0366d6;
+    border-radius: 99px;
 }
 
 .description {
