--- a/packages/docs/src/pages/index.module.css
+++ b/packages/docs/src/pages/index.module.css
@@ -78,7 +78,7 @@
   font-family: 'Noto Sans', sans-serif;
   font-weight: 700;
   font-size: 2.4rem;
-  line-height: .9;
+  line-height: 1.1;
   max-width: 650px;
   margin: 0 auto;
   margin-bottom: 1rem;
