--- a/packages/docs/src/css/custom.css
+++ b/packages/docs/src/css/custom.css
@@ -47,6 +47,11 @@
   --text-muted: #a6a6a6;
 }
 
+/* color mode btn */
+.clean-btn {
+  color: #ffffff;
+}
+
 .navbar {
   background-color: black;
 }
