--- a/packages/sb-react/.storybook/style.css
+++ b/packages/sb-react/.storybook/style.css
@@ -111,7 +111,7 @@ button:focus-visible .treeitem.focused, .treeitem.searchmatch.focused {
     height: 2px;
     width: unset;
     margin-top: -1px;
-    background-color: #00aff4;
+    background-color: #0366d6;
 }
 
 .dragline::before {
@@ -122,7 +122,7 @@ button:focus-visible .treeitem.focused, .treeitem.searchmatch.focused {
     height: 4px;
     width: 4px;
     background: #fff;
-    border: 2px solid #00aff4;
+    border: 2px solid #0366d6;
     border-radius: 99px;
 }
 
