fix docs button color

--- a/packages/docs/src/pages/index.module.css
+++ b/packages/docs/src/pages/index.module.css
@@ -71,6 +71,9 @@
   align-items: center;
   justify-content: center;
 }
+[data-theme='light'] .socialBtn {
+  background-color: white;
+}
 
 .demoBox {
   width: 100%;
