--- a/packages/docs/src/pages/index.module.css
+++ b/packages/docs/src/pages/index.module.css
@@ -52,7 +52,7 @@
 
 .socialBtn {
   height: 47px;
-  width: 80px;
+  width: 60px;
   padding: 0;
   display: flex;
   align-items: center;
@@ -113,5 +113,8 @@
   }
   .heroDemo {
     height: 400px;
+  }
+  .socialBtn {
+    width: 50px;
   }
 }
